fix scrollbar showing

--- a/webpage2.css
+++ b/webpage2.css
@@ -89,7 +89,6 @@ nav {
   font-size: 12px;
   font-weight: 100;
   text-align: justify;
-  overflow: scroll;
 }
 
 .emboldened {
